fixed tmux conf kinda.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,19 @@
-dotfiles/tmux.conf
+# Better Leader Key
+set -g prefix C-a
+
+bind r source-file '~/.tmux.conf'
+
+# Setup plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Grab a battery indicator
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Grab our theme
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark'
+set -g @tmux-gruvbox-right-status-z '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain}'
+
+# Load our config
+run '~/.tmux/plugins/tpm/tpm'
