--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -407,3 +407,4 @@ windowrulev2 = opacity 2 2 1, class:^(steam_app_.*)$
 windowrulev2 = opacity 2 2 1, class:^(zen)$
 windowrulev2 = opacity 2 2 1, class:^(discord)$
 windowrulev2 = opacity 2 2 1, class:^([Mm]inecraft.*)$
+windowrulev2 = opacity 2 2 1, class:^(HighLite)$
